- The 'media-context' keyed value in the option parameter in IM_Entry function can be eliminated.
- The getDataAtLastRecord, setDataAtLastRecord, getDataAtLastRecord methods in IMLibContext class can handle record
  with multiple fields.
- The operation logging feature is implemented, but it's off as default. See the $accessLogLevel variable
  in the params.php file.
- [BUG FIX] After the password of ldap user is changed, propagation of the new password is improved.
- [BUG FIX] Buttons on pagination (ex. Insert...) was disappeared in case of clicking Insert button on related context.
- [BUG FIX] Cache mode did't work. This bug is added after branching 6(master) and 5.x.
- [BUG FIX] Calculation from other contexts didn't work, and fix it.
- [BUG FIX] The class name 'Null' wasn't permitted in PHP7. It was changed to NullDB.
- [BUG FIX] Local context values didn't involve in any calculations.
- [BUG FIX] INTERMediatorOnPage.getIMRootPath is removed.
  (it's not this version, previous but unrecoverable which version was.)
- [INFO] The src/lib/js_lib directory is removed.
- [BUG FIX] The changePassword method of the INTERMediator_DBAdapter class had a bug in case of wrong old password.
- [BUG FIX] Fix handling multibyte currency symbols in some cases.
- [BUG FIX] MediaAccess classe's bugs are fixed.

Ver.5.11 (November 17, 2019)
- Support FileMaker Data API of FileMaker Server 18 and FileMaker Cloud for AWS 1.18.
- Update FMDataAPI.php (Ver.20) and DB_FileMaker_DataAPI.php for FileMaker Data API.
- Improve handling Microsoft Office documents in MediaAccess class (Thanks to Mr. Takayoshi Wada).
- Reduce error messages when using PHP 7.x, DB_FileMaker_FX class and portal access mode.
- Improve stability of INTERMediatorLib.getParentRepeaters in some cases.
- Update deploy.sh and Vagrantfile etc. for the INTER-Mediator-Server VM (Update to Alpine Linux 3.10).

Ver.5.10 (April 17, 2019)
- The Japanese new gengo REIWA is supported in the date formatter.